--- a/frontend/src/styles/responsive.css
+++ b/frontend/src/styles/responsive.css
@@ -21,6 +21,7 @@
         justify-content: center;
         align-items: center;
         margin-bottom: 150px;
+        background-color: #dbdada;
     }
     .img-inicio{
         width: 50%;   
